공유앨범 페이지 껍데기 완성 최근일정에만 온클릭 일단 넣어놓음

--- a/dayCourse_client/client/src/index.css
+++ b/dayCourse_client/client/src/index.css
@@ -99,7 +99,7 @@ button:active {
 }
 
 #sidebar {
-  width: 23rem;
+  width: 20%;
   background-color: #f7f7f7;
   border-right: solid 1px #e3e3e3;
   display: flex;
@@ -237,6 +237,7 @@ i {
 
 #detail {
   flex: 1;
+  overflow-y: scroll;
   padding: 2rem 4rem;
   width: 100%;
 }
