--- a/dayCourse_client/client/src/index.css
+++ b/dayCourse_client/client/src/index.css
@@ -132,17 +132,20 @@ button:active {
 
 #sidebar > div {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  height: 10%;
+  height: 15%;
   /* gap: 0.5rem; */
-  /* padding-top: 1rem;
-  padding-bottom: 1rem; */
+  /* padding-top: 1rem;*/
+  padding-bottom: 1rem; 
   /* border-bottom: 1px solid #e3e3e3; */
 }
-/* 
-#sidebar > div form {
+
+#sidebar > div button {
+  width: 100%;
   position: relative;
-}
+  }
+/* 
 
 #sidebar > div form input[type="search"] {
   width: 100%;
