delete calendar modal & modify calendar ui

--- a/dayCourse_client/client/src/index.css
+++ b/dayCourse_client/client/src/index.css
@@ -101,7 +101,7 @@ button:active {
 #sidebar {
   width: 15%;
   background-color: #f7f7f7;
-  border-right: solid 1px #e3e3e3;
+  border-right: solid 1px #eee;
   display: flex;
   flex-direction: column;
   position: fixed;
@@ -181,6 +181,74 @@ button:active {
   }
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
+
+.bagel-fat-one-regular {
+    font-family: "Bagel Fat One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+  font-family: 'HSSanTokki20-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405@1.0/HSSanTokki20-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NPSfontBold';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/NPSfontBold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: '양진체';
+  src: url('https://fastly.jsdelivr.net/gh/supernovice-lab/font@0.9/yangjin.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'iceHimchan-Rg';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/iceHimchan-Rg.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'STUNNING-Bd';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2410-2@1.0/STUNNING-Bd.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'GapyeongWave';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2312-1@1.1/GapyeongWave.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'omyu_pretty';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/omyu_pretty.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Ownglyph_meetme-Rg';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2402_1@1.0/Ownglyph_meetme-Rg.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'DungGeunMo';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .logo {
   width: 80px;
   height: auto;
@@ -192,7 +260,7 @@ button:active {
   flex: 1;
   padding-left: 17%;
   flex-direction: column;
-  min-height: 100vh; /* 전체 화면 높이 */
+  min-height: 110vh; /* 전체 화면 높이 */
 }
 
 /* main이 남은 공간을 차지하도록 */
@@ -217,6 +285,16 @@ footer {
   flex: 1;
   overflow: auto;
   padding-top: 1rem;
+  /* font-family: "Bagel Fat One", system-ui; */
+  /* font-family: 'HSSanTokki20-Regular', system-ui; */
+  font-family: 'NPSfontBold', system-ui;
+  /* font-family: 'iceHimchan-Rg', system-ui; */
+  /* font-family: '양진체', system-ui; */
+  /* font-family: 'STUNNING-Bd', system-ui; */
+  /* font-family: 'GapyeongWave', system-ui; */
+  /* font-family: 'omyu_pretty', system-ui; */
+  /* font-family: 'Ownglyph_meetme-Rg', system-ui; */
+  /* font-family: 'DungGeunMo', system-ui; */
   /* position: fixed; */
 }
 
