--- a/dayCourse_client/client/src/index.css
+++ b/dayCourse_client/client/src/index.css
@@ -268,7 +268,7 @@ button:active {
 main {
   flex: 1;
   padding: 1rem;
-  position: relative;
+  /* position: relative; */
   /* border-bottom: 1px solid #ccc;  */
 }
 
