--- a/dayCourse_client/client/src/index.css
+++ b/dayCourse_client/client/src/index.css
@@ -317,6 +317,7 @@ i {
   align-items: center;
   justify-content: space-between;
   overflow: hidden;
+  /* width: 100%; */
 
   white-space: pre;
   padding: 0.5rem;
