--- a/dayCourse_client/client/src/pages/Home/KakaoMap.css
+++ b/dayCourse_client/client/src/pages/Home/KakaoMap.css
@@ -3,7 +3,8 @@
 .map-container {
     position: relative;
     width: 75%;
-    height: 500px;
+    /* height: 50%; */
+    height: 45vh;
     overflow: hidden; /* 지도 외부 요소가 잘리지 않도록 설정 */
 }
 
